--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,57 @@
 @import "tailwindcss";
 
+/* Default (Light) Theme Variables */
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --boxbackground: #f2f3f7;
+  --boxcolor-1: #ec5453;
+  --boxcolor-2: #f9bf3f;
+  --boxcolor-3: #a84cb8;
+  --boxcolor-4: #2c98f0;
 }
 
-@theme inline {
+/* Tailwind Theme Tokens */
+@theme {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-boxsecondary: var(--boxbackground);
+
+  --color-color-1: var(--boxcolor-1);
+  --color-color-2: var(--boxcolor-2);
+  --color-color-3: var(--boxcolor-3);
+  --color-color-4: var(--boxcolor-4);
+
+  --color-text-secondary-500: #243e63;
+  --color-text-secondary-200: #667892;
+
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+
+/* Dark Theme Variables */
+[data-theme="dark"] {
+  --background: #0a0a0a;
+  --foreground: #ededed;
+  --boxbackground: #1f2937;
+}
+
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --base: #667892;
   }
-}
+} */
 
 body {
   background: var(--background);
-  color: var(--foreground);
+  color: var(--base);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+
+
+
